# json-excel-converter

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini
json_excel_converter/: __init__.py  converter.py  csv.py  linearize.py  options.py
json_excel_converter/csv/: __init__.py
json_excel_converter/xlsx/: __init__.py  formats.py
tests/: test_columns.py  test_csv_converter.py  test_csv_writer.py  test_xlsx_writer.py
