[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "json_excel_converter"
version = "1.1.0"
description = "JSON to excel convertor"
authors = [ "Mirek Simek <miroslav.simek@vscht.cz>",]
include = [ "tox.ini", "poetry.lock",]
exclude = [ ]
readme = "README.md"
homepage = 'https://github.com/oarepo/json-excel-converter'
repository = 'https://github.com/oarepo/json-excel-converter'
keywords = [ 'json', 'excel', 'csv', 'xlsxwriter' ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
xlsxwriter = { version = "^1.2", optional = true }

[tool.poetry.extras]
xlsxwriter = ['xlsxwriter']

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2.8.1"
pytest-pep8 = "^1.0.6"
